# Lisper

./: .clang-format  .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  test.aiff
.github/workflows/: build.yml
docs/: API.md  GUI_ARCHITECTURE.md  MODELS.md
src/: cli_style.cpp  cli_style.h  formatter.cpp  formatter.h  gui_app.cpp  gui_app.h  gui_main.cpp  interrupt.cpp  interrupt.h  lisper.cpp  lisper.h  live.cpp  live.h  main.cpp  media.cpp  media.h  model_profiles.cpp  model_profiles.h  watcher.cpp  watcher.h
src/gui/: background_transcriber.cpp  background_transcriber.h  file_dialog.cpp  file_dialog.h  layout.cpp  layout.h  state.cpp  state.h  theme.cpp  theme.h
tests/: stress_100.sh
